Fix watch popup top arrow alignment

--- a/fileshack/static/fileshack/css/fileshack.css
+++ b/fileshack/static/fileshack/css/fileshack.css
@@ -61,9 +61,9 @@ form[action="logout/"] button:focus {
     background: url("../img/watch-dialog-top.png") no-repeat center top;
     height: 16px;
     width: 100%;
-    margin-bottom: -1px;
     z-index: 40;
     position: relative;
+    top: 1px;
 }
 
 #watch-dialog .dialog {
